consolidated extra pages; started rewriting

--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -1,3 +1,43 @@
 ---
-slug: home
+slug: "home"
 ---
+
+import { Link } from "gatsby";
+import ContactForm from "../components/contact-form";
+
+![long-distance headshot of Tannor wearing a flowery shirt and grey sweater with greenish cement columns visible in the background](images/head-shot.png "Tannor's Head Shot")
+
+[Github](https://github.com/breizeway/) \* [LinkedIn](https://www.linkedin.com/in/tannor/)
+
+<br />
+
+Hey there 👋
+
+Welcome to my website! It's here to give a brief intro to who I am professionally and to show that I can actually build websites. If that's why you're here, read on!
+
+### who i am
+
+I'm a full-stack software engineer in Portland, Oregon. Portland is my home and my idea of a great career
+
+then I'd love to work with a team of people who are as passionate as I am about writing code and solving problems.
+
+### what i'm good at
+
+JavaScript, TypeScript, Scala
+
+### what i've done
+
+Mostly I've worked on web sites, web apps, and APIs and middleware that power them.
+
+From July 2021 - Jan 2023, I worked at Flow Finance
+
+### what i've studied
+
+- I graduated from [App Academy](https://www.appacademy.io/) (a rigorous 1000+ hour full-stack web dev bootcamp with a < 4% acceptance rate) in April 2021
+- Got my MBA from the University of Redlands in 2019 and my BBA from Walla Walla University in 2015, both with concentrations in Finance
+
+### would you like to know more?
+
+Send me an email 👇
+
+<ContactForm />
