--- a/src/markdown-pages/404.mdx
+++ b/src/markdown-pages/404.mdx
@@ -1,5 +1,9 @@
 ---
-slug: '404'
+slug: "404"
 ---
 
-Sorry, the page you are looking for doesn't exist.
+import { Link } from "gatsby";
+
+Sorry, the page you are looking for does not exist.
+
+<Link to="/">Go Back</Link>
