more rearranging and rewriting

--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -5,7 +5,7 @@ slug: "home"
 import { Link } from "gatsby";
 import ContactForm from "../components/contact-form";
 
-![long-distance headshot of Tannor wearing a flowery shirt and grey sweater with greenish cement columns visible in the background](images/head-shot.png "Tannor's Head Shot")
+![photo of Tannor in a gray sweater with greenish cement columns in the background](images/head-shot.png "Tannor's Head Shot")
 
 [Github](https://github.com/breizeway/) \* [LinkedIn](https://www.linkedin.com/in/tannor/)
 
@@ -13,30 +13,61 @@ import ContactForm from "../components/contact-form";
 
 Hey there 👋
 
-Welcome to my website! It's here to give a brief intro to who I am professionally and to show that I can actually build websites. If that's why you're here, read on!
+Welcome to my website! It's here to give a brief intro to who I am professionally, and of course to show that **I can make things with code**.
 
-### who i am
+## who i am
 
-I'm a full-stack software engineer in Portland, Oregon. Portland is my home and my idea of a great career
+I'm a **full-stack software engineer** living in Portland, Oregon. My family and I love it here, and my dream career in tech is to learn and grow in this community as part of an intimate and collaborative team.
 
-then I'd love to work with a team of people who are as passionate as I am about writing code and solving problems.
+I've been in tech for 2-3 years now, and in that time I've worked out that my biggest strength is **adaptability** and **willingness to explore** new things. I've yet to find a stack I can't make myself useful in, and quickly.
 
-### what i'm good at
+## what i'm good at
 
-JavaScript, TypeScript, Scala
+My strongest skills are on the frontend with **JavaScript/TypeScript and React**. I like to write semantic HTML and work way too hard to get styling just right.
 
-### what i've done
+I've been writing **SQL** for about 10 years since I was s student worker in college, which only became more relevant when I most recently transitioned to backend development where I gained experience building **serverless APIs (both GraphQL and REST) written in Scala, using AWS**.
 
-Mostly I've worked on web sites, web apps, and APIs and middleware that power them.
+I also enjoy scripting and automation (I even write JavaScript on my phone?), have an **eye for good design** (I actually like **CSS**. Really.), and have a firm belief in **clear, honest communication**.
 
-From July 2021 - Jan 2023, I worked at Flow Finance
+### languages and technologies
 
-### what i've studied
+- TypeScript
+- CSS
+- React
+- Scala
+- SQL
+- GraphQL
 
-- I graduated from [App Academy](https://www.appacademy.io/) (a rigorous 1000+ hour full-stack web dev bootcamp with a < 4% acceptance rate) in April 2021
-- Got my MBA from the University of Redlands in 2019 and my BBA from Walla Walla University in 2015, both with concentrations in Finance
+## where i've worked
 
-### would you like to know more?
+I have a background in finance and higher education, having come to tech as my second career. At my first job in tech at Flow Finance, I was **quickly marked for promotion from junior to mid within 6 months**.
+
+### Flow Finance
+
+**Software Engineer, Backend** \* _Jul 2022 - Jan 2023_
+
+My primary responsibility was to build and maintain an API for initiating and managing customer OAuth integrations. We built SAM applications in Scala, leveraging AWS Lambda, AppSync, API Gateway (and more) to expose both REST and GraphQL APIs to internal applications.
+
+**Junior Software Engineer, Frontend** \* _Jul 2021 - Jul 2022_
+
+Developed major features for new and existing internal web apps with Typescript, React, and Redux. Worked closely with our product and design teams, using CSS and Tailwind to create beautiful UI and thoughtful UX.
+
+### University of Redlands and Walla Walla University
+
+Before I became a Software Engineer, I worked in higher education in various tech-adjacent roles in academic records and financial aid, both at Walla Walla University and University of Redlands. I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental IS support and maintenance. I also briefly served as an interim Director of Institutional Research.
+
+## what i've studied
+
+### Full-Stack Web Development
+
+I graduated from [App Academy](https://www.appacademy.io/) (an intense 1000+ hour bootcamp with a < 4% acceptance rate) after attending from November 2020 to April 2021.
+
+### Business Administration / Finance
+
+- I have my **MBA** (Finance concentration) from University of Redlands where I attended from 2018 - 2019.
+- Before that, I went to Walla Walla University from 2011 - 2015 where I got my **BBA** (Bachelor of Business Administration, also with a Finance concentration).
+
+## would you like to know more?
 
 Send me an email 👇
 
