--- a/src/markdown-pages/404.mdx
+++ b/src/markdown-pages/404.mdx
@@ -1,5 +1,5 @@
----
-slug: '404'
----
+import { Link } from "gatsby";
 
-Sorry, the page you are looking for doesn't exist.
+Sorry, the page you are looking for does not exist.
+
+<Link to="/">Go Back</Link>
