--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -1,3 +1,70 @@
----
-slug: home
----
+import { Link } from "gatsby";
+import ContactForm from "../components/contact-form";
+
+![photo of Tannor in a gray sweater with greenish cement columns in the background](images/head-shot.png "Tannor's Head Shot")
+
+[Github](https://github.com/breizeway/) \* [LinkedIn](https://www.linkedin.com/in/tannor/)
+
+<br />
+
+Hey there 👋
+
+Welcome to my website! It's here to give a brief intro to who I am professionally, and of course to show that **I can make things with code**.
+
+## who i am
+
+I'm a **full-stack software engineer** living in Portland, Oregon. My family and I love it here, and my dream career in tech is to learn and grow in this community as part of an intimate and collaborative team.
+
+I've been in tech for 2-3 years now, and in that time I've worked out that my biggest strength is **adaptability** and **willingness to explore** new things. I've yet to find a stack I can't make myself useful in, and quickly.
+
+## what i'm good at
+
+My strongest skills are on the frontend with **JavaScript/TypeScript and React**. I like to write semantic HTML and work way too hard to get styling just right.
+
+I've been writing **SQL** for about 10 years since I was s student worker in college, which only became more relevant when I most recently transitioned to backend development where I gained experience building **serverless APIs (both GraphQL and REST) written in Scala, using AWS**.
+
+I also enjoy scripting and automation (I even write JavaScript on my phone?), have an **eye for good design** (I actually like **CSS**. Really.), and have a firm belief in **clear, honest communication**.
+
+### languages and technologies
+
+- TypeScript
+- CSS
+- React
+- Scala
+- SQL
+- GraphQL
+
+## where i've worked
+
+I have a background in finance and higher education, having come to tech as my second career. At my first job in tech at Flow Finance, I was **quickly marked for promotion from junior to mid within 6 months**.
+
+### Flow Finance
+
+**Software Engineer, Backend** \* _Jul 2022 - Jan 2023_
+
+My primary responsibility was to build and maintain an API for initiating and managing customer OAuth integrations. We built SAM applications in Scala, leveraging AWS Lambda, AppSync, API Gateway (and more) to expose both REST and GraphQL APIs to internal applications.
+
+**Junior Software Engineer, Frontend** \* _Jul 2021 - Jul 2022_
+
+Developed major features for new and existing internal web apps with Typescript, React, and Redux. Worked closely with our product and design teams, using CSS and Tailwind to create beautiful UI and thoughtful UX.
+
+### University of Redlands and Walla Walla University
+
+Before I became a Software Engineer, I worked in higher education in various tech-adjacent roles in academic records and financial aid, both at Walla Walla University and University of Redlands. I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental IS support and maintenance. I also briefly served as an interim Director of Institutional Research.
+
+## what i've studied
+
+### Full-Stack Web Development
+
+I graduated from [App Academy](https://www.appacademy.io/) (an intense 1000+ hour bootcamp with a < 4% acceptance rate) after attending from November 2020 to April 2021.
+
+### Business Administration / Finance
+
+- I have my **MBA** (Finance concentration) from University of Redlands where I attended from 2018 - 2019.
+- Before that, I went to Walla Walla University from 2011 - 2015 where I got my **BBA** (Bachelor of Business Administration, also with a Finance concentration).
+
+## would you like to know more?
+
+Send me an email 👇
+
+<ContactForm />
