--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -13,15 +13,15 @@ Welcome to my website! It's here to give a brief intro to who I am professionall
 
 ## who i am
 
-I'm a **full-stack software engineer** living in Portland, Oregon. My family and I love it here, and my dream career in tech is to learn and grow in this community as part of an intimate and collaborative team.
+I'm a **full-stack software engineer** living in Portland, Oregon. My family and I love it here, and my dream career in tech is one where I get to learn and grow in this community as part of an intimate and collaborative team.
 
 I've been in tech for 2-3 years now, and in that time I've worked out that my biggest strength is **adaptability** and **willingness to explore** new things. I've yet to find a stack I can't make myself useful in, and quickly.
 
 ## what i'm good at
 
-My strongest skills are on the frontend with **JavaScript/TypeScript and React**. I like to write semantic HTML and work way too hard to get styling just right.
+My strongest skills are on the frontend with **JavaScript/TypeScript and React**. I like to write semantic HTML and to work too hard to get styling just right.
 
-I've been writing **SQL** for about 10 years since I was s student worker in college, which only became more relevant when I most recently transitioned to backend development where I gained experience building **serverless APIs (both GraphQL and REST) written in Scala, using AWS**.
+I've been writing **SQL** for about 10 years since I was a student worker in college, which only became more relevant when I most recently transitioned to backend development where I gained experience building **serverless APIs (both GraphQL and REST) written in Scala, using AWS**.
 
 I also enjoy scripting and automation (I even write JavaScript on my phone?), have an **eye for good design** (I actually like **CSS**. Really.), and have a firm belief in **clear, honest communication**.
 
