--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -19,11 +19,11 @@ I've been in tech for 2-3 years now, and in that time I've worked out that my bi
 
 ## what i'm good at
 
-My strongest skills are on the frontend with **JavaScript/TypeScript and React**. I like to write semantic HTML and to work too hard to get styling just right.
+My strongest skills are on the frontend with **JavaScript/TypeScript and React**. I'm into writing semantic HTML and working much too hard to get the styling just right.
 
-I've been writing **SQL** for about 10 years since I was a student worker in college, which only became more relevant when I most recently transitioned to backend development where I gained experience building **serverless APIs (both GraphQL and REST) written in Scala, using AWS**.
+I've been writing **SQL** for about 10 years since I was a student worker in college, which only became more relevant when I most recently transitioned to backend development where I built **serverless APIs (both GraphQL and REST) written in Scala, using AWS**.
 
-I also enjoy scripting and automation (I even write JavaScript on my phone?), have an **eye for good design** (I actually like **CSS**. Really.), and have a firm belief in **clear, honest communication**.
+I really enjoy scripting and automation (I even write JavaScript on my phone?), have an **eye for good design** (I actually like **CSS**. Really.), and have a firm belief in **clear, honest communication**.
 
 ### languages and technologies
 
@@ -36,17 +36,17 @@ I also enjoy scripting and automation (I even write JavaScript on my phone?), ha
 
 ## where i've worked
 
-I have a background in finance and higher education, having come to tech as my second career. At my first job in tech at Flow Finance, I was **quickly marked for promotion from junior to mid within 6 months**.
+My background is in finance and higher education, having come to tech as my second career. At my first software job at Flow Finance, I was the only cold hire on the engineering team and was **quickly marked for promotion from junior to mid within 6 months**.
 
 ### Flow Finance
 
 **Software Engineer, Backend** \* _Jul 2022 - Jan 2023_
 
-My primary responsibility was to build and maintain an API for initiating and managing customer OAuth integrations. We built SAM applications in Scala, leveraging AWS Lambda, AppSync, API Gateway (and more) to expose both REST and GraphQL APIs to internal applications.
+My main responsibility was to build and maintain an API for initiating and managing customer OAuth integrations. We built SAM applications in Scala, leveraging AWS Lambda, AppSync, API Gateway (and more) to expose both REST and GraphQL APIs to internal applications.
 
 **Junior Software Engineer, Frontend** \* _Jul 2021 - Jul 2022_
 
-Developed major features for new and existing internal web apps with Typescript, React, and Redux. Worked closely with our product and design teams, using CSS and Tailwind to create beautiful UI and thoughtful UX.
+I Developed major features for new and existing internal web apps with Typescript, React, and Redux. Working closely with our product and design teams, I used CSS and Tailwind to create beautiful UI and thoughtful UX.
 
 ### University of Redlands and Walla Walla University
 
