--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -13,7 +13,7 @@ Welcome to my website! It's here to give a brief intro to who I am professionall
 
 ## who i am
 
-I'm a **full-stack software engineer** living in Portland, Oregon. My family and I love it here, and my dream career in tech is one where I get to learn and grow in this community as part of an intimate and collaborative team.
+I'm a **full-stack software engineer** living in Portland, Oregon. My family and I love it here, and my dream career in tech is one where I get to learn and grow in this community as part of an intimate and highly collaborative team.
 
 I've been in tech for 2-3 years now, and in that time I've worked out that my biggest strength is **adaptability** and **willingness to explore** new things. I've yet to find a stack I can't make myself useful in, and quickly.
 
@@ -36,7 +36,7 @@ I really enjoy scripting and automation (I even write JavaScript on my phone?), 
 
 ## where i've worked
 
-My background is in finance and higher education, having come to tech as my second career. At my first software job at Flow Finance, I was the only cold hire on the engineering team and was **quickly marked for promotion from junior to mid within 6 months**.
+My background is in finance and higher education, having come to tech as my second career. At my first software job at [Flow Finance](https://flowfi.com/), I was the only cold hire on the engineering team and was **quickly marked for promotion from junior to mid within 6 months**.
 
 ### Flow Finance
 
@@ -50,7 +50,7 @@ I Developed major features for new and existing internal web apps with Typescrip
 
 ### University of Redlands and Walla Walla University
 
-Before I became a Software Engineer, I worked in higher education in various tech-adjacent roles in academic records and financial aid, both at Walla Walla University and University of Redlands. I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental IS support and maintenance. I also briefly served as an interim Director of Institutional Research.
+Before I became a Software Engineer, I worked in higher education in various tech-adjacent roles in academic records and financial aid, both at [Walla Walla University](https://wallawalla.edu/) and [University of Redlands](https://redlands.edu/). I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental IS support and maintenance. I also briefly served as an interim Director of Institutional Research.
 
 ## what i've studied
 
@@ -60,8 +60,8 @@ I graduated from [App Academy](https://www.appacademy.io/) (an intense 1000+ hou
 
 ### Business Administration / Finance
 
-- I have my **MBA** (Finance concentration) from University of Redlands where I attended from 2018 - 2019.
-- Before that, I went to Walla Walla University from 2011 - 2015 where I got my **BBA** (Bachelor of Business Administration, also with a Finance concentration).
+- I have my **MBA** (Finance concentration) from [University of Redlands](https://redlands.edu/) where I attended from 2018 - 2019.
+- Before that, I went to [Walla Walla University](https://wallawalla.edu/) from 2011 - 2015 where I got my **BBA** (Bachelor of Business Administration, also with a Finance concentration).
 
 ## would you like to know more?
 
