brighter bold on dark mode; minor copy chnages

--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -50,7 +50,7 @@ I Developed major features for new and existing internal web apps with Typescrip
 
 ### University of Redlands and Walla Walla University
 
-Before I became a Software Engineer, I worked in higher education in various tech-adjacent roles in academic records and financial aid, both at [Walla Walla University](https://wallawalla.edu/) and [University of Redlands](https://redlands.edu/). I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental IS support and maintenance. I also briefly served as an interim Director of Institutional Research.
+Before I became a Software Engineer, I worked in higher education in various tech-adjacent roles in academic records and financial aid, both at [Walla Walla University](https://wallawalla.edu/) and [University of Redlands](https://redlands.edu/). I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental IS support and maintenance. I also briefly served as an interim Director of Institutional Research at WWU.
 
 ## what i've studied
 
