--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -15,34 +15,36 @@ Welcome to my website! It's here to give a brief intro to who I am professionall
 
 I'm a **full-stack software engineer** living in Portland, Oregon. My family and I love it here, and my dream career in tech is one where I get to learn and grow in this community as part of an intimate and highly collaborative team.
 
-I've been in tech for 2-3 years now, and in that time I've worked out that my biggest strength is **adaptability** and **willingness to explore** new things. I've yet to find a stack I can't make myself useful in, and quickly.
+My biggest strengths are **adaptability** and **willingness to explore** new things. I've yet to find a stack I can't make myself useful in, and quickly.
 
 ## what i'm good at
 
-My strongest skills are on the frontend with **JavaScript/TypeScript and React**. I'm into writing semantic HTML and working much too hard to get the styling just right.
-
-I've been writing **SQL** for about 10 years since I was a student worker in college, which only became more relevant when I most recently transitioned to backend development where I built **serverless APIs (both GraphQL and REST) written in Scala, using AWS**.
-
-I really enjoy scripting and automation (I even write JavaScript on my phone?), have an **eye for good design** (I actually like **CSS**. Really.), and have a firm belief in **clear, honest communication**.
+- frontend web development (and I **actually like CSS**. Really.)
+- backend development, designing APIs and evolving them as needed
+- writing SQL (I've been using it for about 10 years, since college)
+- scripting and automation (I even sometimes write JavaScript on my phone??)
+- **clear, honest communication**
 
 ### languages and technologies
 
-- TypeScript
-- CSS
+- TypeScript & JavaScript
 - React
+- CSS
 - Scala
+- Python
 - SQL
 - GraphQL
+- AWS
 
 ## where i've worked
 
-My background is in finance and higher education, having come to tech as my second career. At my first software job at [Flow Finance](https://flowfi.com/), I was the only cold hire on the engineering team and was **quickly marked for promotion from junior to mid within 6 months**.
+My last software job was at small fintech startup, [Flow Finance](https://flowfi.com/), where I was the only cold hire on the engineering team and was **quickly marked for promotion from junior to mid within 6 months**.
 
 ### Flow Finance
 
 **Software Engineer, Backend** \* _Jul 2022 - Jan 2023_
 
-My main responsibility was to build and maintain an API for initiating and managing customer OAuth integrations. We built SAM applications in Scala, leveraging AWS Lambda, AppSync, API Gateway (and more) to expose both REST and GraphQL APIs to internal applications.
+My main task was to build and maintain an API for initiating and managing customer OAuth integrations. We built SAM applications in Scala, leveraging AWS Lambda, AppSync, API Gateway (and more) to expose both REST and GraphQL APIs to internal applications.
 
 **Junior Software Engineer, Frontend** \* _Jul 2021 - Jul 2022_
 
@@ -50,7 +52,7 @@ I Developed major features for new and existing internal web apps with Typescrip
 
 ### University of Redlands and Walla Walla University
 
-Before I became a Software Engineer, I worked in higher education in various tech-adjacent roles in academic records and financial aid, both at [Walla Walla University](https://wallawalla.edu/) and [University of Redlands](https://redlands.edu/). I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental IS support and maintenance. I also briefly served as an interim Director of Institutional Research at WWU.
+In my pre-coding days, I worked in higher education at various tech-adjacent admin roles, both for [Walla Walla University](https://wallawalla.edu/) and [University of Redlands](https://redlands.edu/). I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental IS support and maintenance. I also briefly served as an interim Director of Institutional Research at WWU.
 
 ## what i've studied
 
@@ -58,10 +60,10 @@ Before I became a Software Engineer, I worked in higher education in various tec
 
 I graduated from [App Academy](https://www.appacademy.io/) (an intense 1000+ hour bootcamp with a < 4% acceptance rate) after attending from November 2020 to April 2021.
 
-### Business Administration / Finance
+### Business Administration & Finance
 
-- I have my **MBA** (Finance concentration) from [University of Redlands](https://redlands.edu/) where I attended from 2018 - 2019.
-- Before that, I went to [Walla Walla University](https://wallawalla.edu/) from 2011 - 2015 where I got my **BBA** (Bachelor of Business Administration, also with a Finance concentration).
+- I have my **MBA** (Finance concentration) from [University of Redlands](https://redlands.edu/) where I attended from 2018 to 2019.
+- Before that, I went to [Walla Walla University](https://wallawalla.edu/) from 2011 to 2015 where I got my **BBA** (Bachelor of Business Administration, also with a Finance concentration).
 
 ## would you like to know more?
 
