--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -56,11 +56,11 @@ In my pre-coding days, I worked in higher education at various tech-adjacent adm
 
 ## what i've studied
 
-### Full-Stack Web Development
+### full-stack web development
 
 I graduated from [App Academy](https://www.appacademy.io/) (an intense 1000+ hour bootcamp with a < 4% acceptance rate) after attending from November 2020 to April 2021.
 
-### Business Administration & Finance
+### business administration & finance
 
 - I have my **MBA** (Finance concentration) from [University of Redlands](https://redlands.edu/) where I attended from 2018 to 2019.
 - Before that, I went to [Walla Walla University](https://wallawalla.edu/) from 2011 to 2015 where I got my **BBA** (Bachelor of Business Administration, also with a Finance concentration).
