--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -19,18 +19,18 @@ My biggest strengths are **adaptability** and **willingness to explore** new thi
 
 ## what i'm good at
 
-- frontend web development (and I **actually like CSS**. Really.)
-- backend development, designing APIs and evolving them as needed
-- writing SQL (I've been using it for about 10 years, since college)
-- scripting and automation (I even sometimes write JavaScript on my phone??)
+- **frontend web development** (and I **actually like CSS**. Really.)
+- **backend development**, designing APIs and evolving them as needed
+- writing **SQL** (I've been using it for about 10 years, since college)
+- **scripting and automation** (I even sometimes write JavaScript on my phone??)
 - **clear, honest communication**
 
 ### languages and technologies
 
-- TypeScript & JavaScript
-- React
+- **TypeScript & JavaScript**
+- **React**
 - CSS
-- Scala
+- **Scala**
 - Python
 - SQL
 - GraphQL
@@ -44,7 +44,7 @@ My last software job was at small fintech startup, [Flow Finance](https://flowfi
 
 **Software Engineer, Backend** \* _Jul 2022 - Jan 2023_
 
-My main task was to build and maintain an API for initiating and managing customer OAuth integrations. We built SAM applications in Scala, leveraging AWS Lambda, AppSync, API Gateway (and more) to expose both REST and GraphQL APIs to internal applications.
+My main task was to build and maintain an API for initiating and **managing customer OAuth** integrations. We built SAM applications in Scala, leveraging AWS Lambda, AppSync, API Gateway (and more) to expose both **REST and GraphQL APIs** to internal applications.
 
 **Junior Software Engineer, Frontend** \* _Jul 2021 - Jul 2022_
 
@@ -52,7 +52,7 @@ I Developed major features for new and existing internal web apps with Typescrip
 
 ### University of Redlands and Walla Walla University
 
-In my pre-coding days, I worked in higher education at various tech-adjacent admin roles, both for [Walla Walla University](https://wallawalla.edu/) and [University of Redlands](https://redlands.edu/). I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental IS support and maintenance. I also briefly served as an interim Director of Institutional Research at WWU.
+In my pre-coding days, I worked in higher education at various tech-adjacent admin roles, both for [Walla Walla University](https://wallawalla.edu/) and [University of Redlands](https://redlands.edu/). I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental **IS/IT support and maintenance**. I also briefly served as an interim **Director of Institutional Research** at WWU.
 
 ## what i've studied
 
@@ -62,7 +62,7 @@ I graduated from [App Academy](https://www.appacademy.io/) (an intense 1000+ hou
 
 ### business administration & finance
 
-- I have my **MBA** (Finance concentration) from [University of Redlands](https://redlands.edu/) where I attended from 2018 to 2019.
+- I have my **MBA (Finance concentration)** from [University of Redlands](https://redlands.edu/) where I attended from 2018 to 2019.
 - Before that, I went to [Walla Walla University](https://wallawalla.edu/) from 2011 to 2015 where I got my **BBA** (Bachelor of Business Administration, also with a Finance concentration).
 
 ## would you like to know more?
