--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -48,17 +48,17 @@ My main task was to build and maintain an API for initiating and **managing cust
 
 **Junior Software Engineer, Frontend** \* _Jul 2021 - Jul 2022_
 
-I Developed major features for new and existing internal web apps with Typescript, React, and Redux. Working closely with our product and design teams, I used CSS and Tailwind to create beautiful UI and thoughtful UX.
+I Developed major features for **internal and costomer-facing web apps** with **Typescript, React**, and Redux. Working closely with our product and design teams, I used **CSS and Tailwind** to create beautiful UI and thoughtful UX.
 
 ### University of Redlands and Walla Walla University
 
-In my pre-coding days, I worked in higher education at various tech-adjacent admin roles, both for [Walla Walla University](https://wallawalla.edu/) and [University of Redlands](https://redlands.edu/). I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental **IS/IT support and maintenance**. I also briefly served as an interim **Director of Institutional Research** at WWU.
+In my pre-coding days, I worked in higher education at various tech-adjacent admin roles, both for [Walla Walla University](https://wallawalla.edu/) and [University of Redlands](https://redlands.edu/). I **wrote SQL and managed BI systems**, tuition AR/AP, and departmental **IS/IT support and maintenance**. I also briefly served as an interim Director of **Institutional Research** at WWU.
 
 ## what i've studied
 
 ### full-stack web development
 
-I graduated from [App Academy](https://www.appacademy.io/) (an intense 1000+ hour bootcamp with a < 4% acceptance rate) after attending from November 2020 to April 2021.
+I graduated from [App Academy](https://www.appacademy.io/) (an intense 1000+ hour **coding bootcamp** with a < 4% acceptance rate) after attending from November 2020 to April 2021.
 
 ### business administration & finance
 
