--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -29,10 +29,10 @@ My biggest strengths are **adaptability** and **willingness to explore** new thi
 
 - **TypeScript & JavaScript**
 - **React**
-- CSS
+- CSS (both vanilla and with Tailwind)
 - **Scala**
 - Python
-- SQL
+- SQL (mostly PostgreSQL)
 - GraphQL
 - AWS
 
