--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -27,7 +27,7 @@ My biggest strengths are **adaptability** and **willingness to explore** new thi
 
 ### languages and technologies
 
-- **TypeScript & JavaScript**
+- **TypeScript / JavaScript / Node**
 - **React**
 - CSS (both vanilla and with Tailwind)
 - **Scala**
