line thickness for safari

--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -1,7 +1,7 @@
 import { Link } from "gatsby";
 import ContactForm from "../components/contact-form";
 
-![photo of Tannor in a gray sweater with green cement columns in the background](images/head-shot.png "Tannor's Head Shot")
+![photo of Tannor in a gray sweater with greenish cement columns in the background](images/head-shot.png "Tannor's Head Shot")
 
 [Github](https://github.com/breizeway/) \* [LinkedIn](https://www.linkedin.com/in/tannor/)
 
