--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -22,7 +22,7 @@ My biggest strengths are **adaptability** and **willingness to explore** new thi
 - **frontend web development** (and I **actually like CSS**. Really.)
 - **backend development**, designing APIs and evolving them as needed
 - writing **SQL** (I've been using it for about 10 years, since college)
-- **scripting and automation** (I even sometimes write JavaScript on my phone??)
+- **scripting and automation** (I sometimes write JavaScript on my phone??)
 - **clear, honest communication**
 
 ### languages and technologies
@@ -44,7 +44,7 @@ My last software job was at small fintech startup, [Flow Finance](https://flowfi
 
 **Software Engineer, Backend** \* _Jul 2022 - Jan 2023_
 
-My main task was to build and maintain an API for initiating and **managing customer OAuth** integrations. We built SAM applications in Scala, leveraging AWS Lambda, AppSync, API Gateway (and more) to expose both **REST and GraphQL APIs** to internal applications.
+My main responsibility was to build and maintain an API for initiating and **managing customer OAuth** integrations. We built SAM applications in Scala, leveraging AWS Lambda, AppSync, API Gateway (and more) to expose both **REST and GraphQL APIs** to internal applications.
 
 **Junior Software Engineer, Frontend** \* _Jul 2021 - Jul 2022_
 
