projects and project components

--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -1,5 +1,6 @@
 import { Link } from "gatsby";
 import ContactForm from "../components/contact-form";
+import Projects from "../components/projects";
 
 ![photo of Tannor in a gray sweater with green cement columns in the background](images/head-shot.png "Tannor's Head Shot")
 
@@ -35,6 +36,10 @@ My biggest strengths are **adaptability** and **willingness to explore** new thi
 - SQL (mostly PostgreSQL)
 - GraphQL
 - AWS
+
+## some things i've built
+
+<Projects />
 
 ## where i've worked
 
