add projects component; add projects section to home page

--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -10,7 +10,7 @@ import Projects from "../components/projects";
 
 Hey there 👋
 
-Welcome to my website! It's here to give a brief intro to who I am professionally, and of course to show that **I can make things with code**.
+Welcome to my website! It's here to give a brief intro to who I am professionally, and of course to show **I can make things with code**.
 
 ## who i am
 
