--- a/src/markdown-pages/home.mdx
+++ b/src/markdown-pages/home.mdx
@@ -1,5 +1,6 @@
 import { Link } from "gatsby";
 import ContactForm from "../components/contact-form";
+import Projects from "../components/projects";
 
 ![photo of Tannor in a gray sweater with green cement columns in the background](images/head-shot.png "Tannor's Head Shot")
 
@@ -9,7 +10,7 @@ import ContactForm from "../components/contact-form";
 
 Hey there 👋
 
-Welcome to my website! It's here to give a brief intro to who I am professionally, and of course to show that **I can make things with code**.
+Welcome to my website! It's here to give a brief intro to who I am professionally, and of course to show **I can make things with code**.
 
 ## who i am
 
@@ -35,6 +36,10 @@ My biggest strengths are **adaptability** and **willingness to explore** new thi
 - SQL (mostly PostgreSQL)
 - GraphQL
 - AWS
+
+## some things i've built
+
+<Projects />
 
 ## where i've worked
 
